# proofline

./: .gitignore  Makefile  README.md  ask.sh  config.example.yaml  config.schema.json  install.sh  optional-requirements.txt  proofline.example.yaml  pyproject.toml  requirements.txt  run.sh
corp_kb/: __main__.py  config.py  storage.py
corp_kb/agent/: ask.py  compose.py  tools.py
corp_kb/extractors/: api_surface.py  bigquery.py  capabilities.py  code_graph.py  code_index.py  datadog.py  embeddings.py  endpoint_map.py  entity_resolution.py  graph_build.py  neo4j_export.py  repo.py  static_edges.py
corp_kb/pipeline/: runner.py
proofline/: __main__.py  cli.py  config.py  logging_utils.py  mcp_server.py  progress.py  repair.py  storage.py  uninstall.py  upgrade.py  utils.py  version.py  visualization.py
proofline/agent/: ask.py  compose.py  loop.py  providers.py  tools.py
proofline/extractors/: api_surface.py  bigquery.py  capabilities.py  code_graph.py  code_index.py  compatibility.py  datadog.py  embeddings.py  endpoint_map.py  entity_resolution.py  git_history.py  graph_backend.py  graph_build.py  repo.py  static_edges.py
proofline/pipeline/: repo_jobs.py  (+1 more)
scripts/: bootstrap.sh  cgc.sh  download_confluence.py  download_jira.py  install.sh
tests/: test_code_index_ast.py  test_config_migration.py  test_embeddings_cluster.py  test_git_history.py  test_mcp_server.py  test_pipeline_progress.py  test_repair.py  test_ui_server.py  test_utils.py  test_version_update.py  test_visualization.py
web/: index.html  package-lock.json  package.json  vite.config.js
(+8 files in other folders)
